--- a/laptops.html
+++ b/laptops.html
@@ -52,16 +52,16 @@
                 <div class="row">
                     <div class="col-3">
                         <p>Lenovo IdeaPad Slim 3 2021 11th Gen Intel Core i5 15.6 FHD Thin & Light Laptop (8GB/512GB SSD/Windows 10/MS Office/Backlit Keyboard/2 Year Warranty/Arctic Grey/1.65Kg), 82H801CWIN</p>
-                        <p><mark> Rs. 58,990 </mark><del>Rs. 81,090 </del> Save Rs. 22,100</p>
-                        <p> (27%) </p>
-                        <p> Save extra with No Cost EMI </p>
+                        <p><mark> Rs. 58,200 </mark><del>Rs. 65,900 </del> Save Rs. 7,908</p>
+                        <p> (12%) </p>
+                        <p> Inclusive of all taxes</p>
                         <p style="color:blue"> prime</p>
-                        <p> Free Delivery by Renewed Store</p>
+                        <p> 7 Days Replacement + 2 Year Warranty </p>
                     </div> 
                     <div class="col-3">
-                        <a href="https://www.amazon.in/Lenovo-IdeaPad-Keyboard-Warranty-82H801CWIN/dp/B09999TTV3/ref=sr_1_11_sspa?dchild=1&keywords=laptops&qid=1628919628&sr=8-11-spons&psc=1&spLa=ZW5jcnlwdGVkUXVhbGlmaWVyPUExUDBGTFdFMVdHWFdaJmVuY3J5cHRlZElkPUEwMDU2NTUyMjQyNEkyVTZYTDBFSyZlbmNyeXB0ZWRBZElkPUEwNDcxOTYxOVlOWkFVNzlVSDlJJndpZGdldE5hbWU9c3BfbXRmJmFjdGlvbj1jbGlja1JlZGlyZWN0JmRvTm90TG9nQ2xpY2s9dHJ1ZQ==">
+                        <a href="https://amzn.to/3ou2rgo">
                         <img src="https://images-na.ssl-images-amazon.com/images/I/61q6x-ll5FL._SL1000_.jpg" alt=""></a>
-                        
+                        <a href="https://amzn.to/3ou2rgo"> <p> More Information </p> </a>
                     </div>  
                 </div>
             </div>
