--- a/laptops.html
+++ b/laptops.html
@@ -61,7 +61,7 @@
                     <div class="col-3">
                         <a href="https://amzn.to/3ou2rgo">
                         <img src="https://images-na.ssl-images-amazon.com/images/I/61q6x-ll5FL._SL1000_.jpg" alt=""></a>
-                        <a href="https://amzn.to/3ou2rgo"> <p> More Information </p> </a>
+                        <a href="https://amzn.to/3ou2rgo"> <p style="border:5px; color:white; background-color:green"> &nbsp More Information &nbps </p> </a>
                     </div>  
                 </div>
             </div>
