--- a/laptops.html
+++ b/laptops.html
@@ -61,7 +61,7 @@
                     <div class="col-3">
                         <a href="https://amzn.to/3ou2rgo">
                         <img src="https://images-na.ssl-images-amazon.com/images/I/61q6x-ll5FL._SL1000_.jpg" alt=""></a>
-                        <a href="https://amzn.to/3ou2rgo"> <p style="border:5px; color:white; background-color:green"> &nbsp &ensp More Information  </p> </a>
+                        <a href="https://amzn.to/3ou2rgo"> <p style="border:5px; color:white; background-color:green"> &nbsp &nbsp &nbp &nbsp More Information  </p> </a>
                     </div>  
                 </div>
             </div>
@@ -73,17 +73,17 @@
                 <div class="row">
                     <div class="col-3">
                         <p>Dell Vostro 3401 14" FHD Display Laptop (i3-1005G1 / 8GB / 256GB SSD / Integrated Graphics / Win10 + MSO Black) D552181WIN9BE</p>
-                        <p><mark> Rs. 39,890 </mark><del>Rs. 43,990 </del> Save Rs. 4,100</p>
-                        <p> (9%) </p>
-                       <!-- <p> Save extra with No Cost EMI </p> -->
+                        <p><mark> ₹42,800 </mark><del>Rs. ₹49,091 </del> Save Rs. ₹6,291</p>
+                        <p> (13%) </p>
+                        <p> Inclusive of all taxes </p> 
                         <p style="color:blue"> prime</p>
-                        <p> Free Delivery by Renewed Store</p>
+                        <p> 7 Days Replacement + 1 Year Warranty </p>
                         <p style="color:red"> Only 1 left stock.</p> 
                     </div> 
                     <div class="col-3">
-                        <a href="https://www.amazon.in/Dell-Vostro-3401-Integrated-D552181WIN9BE/dp/B097SZ3FXB/ref=sr_1_45?dchild=1&keywords=laptops&qid=1628920033&sr=8-45">
-                        <img src="https://images-na.ssl-images-amazon.com/images/I/51jPUwqQTFL._SX569_.jpg" alt=""></a>
-                        
+                        <a href="https://amzn.to/3uzOz87">
+                        <img src="https://m.media-amazon.com/images/I/51CEknIIHcL._SL1080_.jpg" alt="">
+                        <p style="border:5px; color:white; background-color:green"> &nbsp &nbsp &nbp &nbsp More Information  </p></a>
                     </div>  
                 </div>
             </div>
