--- a/laptops.html
+++ b/laptops.html
@@ -61,7 +61,7 @@
                     <div class="col-3">
                         <a href="https://amzn.to/3ou2rgo">
                         <img src="https://images-na.ssl-images-amazon.com/images/I/61q6x-ll5FL._SL1000_.jpg" alt=""></a>
-                        <a href="https://amzn.to/3ou2rgo"> <p style="border:5px; color:white; background-color:green"> &nbsp &nbsp &nbp &nbsp More Information  </p> </a>
+                        <a href="https://amzn.to/3ou2rgo"> <p style="border:5px; color:white; background-color:green"> &nbsp &nbsp &nbsp &nbsp >>> More Information  </p> </a>
                     </div>  
                 </div>
             </div>
@@ -83,7 +83,7 @@
                     <div class="col-3">
                         <a href="https://amzn.to/3uzOz87">
                         <img src="https://m.media-amazon.com/images/I/51CEknIIHcL._SL1080_.jpg" alt="">
-                        <p style="border:5px; color:white; background-color:green"> &nbsp &nbsp &nbp &nbsp More Information  </p></a>
+                        <p style="border:5px; color:white; background-color:green"> &nbsp &nbsp &nbsp &nbsp >>> More Information  </p></a>
                     </div>  
                 </div>
             </div>
@@ -100,12 +100,12 @@
                         <p> Save extra with No Cost EMI </p>
                         <p style="color:blue"> prime</p>
                         <p> Free Delivery by Renewed Store</p>
-                       <p style="color:red"> Only 1 left stock.</p> 
+                       <p> 7 Days Replacement + 1 Year Warranty </p>
                     </div> 
                     <div class="col-3">
-                        <a href="https://www.amazon.in/HP-Chromebook-12b-ca0010TU-Touchscreen-Integrated/dp/B08C5WSTR6/ref=sr_1_13?dchild=1&keywords=laptops&qid=1628919628&sr=8-13">
-                        <img src="https://images-eu.ssl-images-amazon.com/images/I/516HJHjFfmL._SX300_SY300_QL70_FMwebp_.jpg" alt=""></a>
-                        
+                        <a href="https://amzn.to/3HBN4tO">
+                        <img src="https://images-eu.ssl-images-amazon.com/images/I/516HJHjFfmL._SX300_SY300_QL70_FMwebp_.jpg" alt="">
+                        <p style="border:5px; color:white; background-color:green"> &nbsp &nbsp &nbsp &nbsp >>> More Information  </p></a>
                     </div>  
                 </div>
             </div>
@@ -117,17 +117,17 @@
                 <div class="row">
                     <div class="col-3">
                         <p>HP 15 11th Gen Intel Core i3 Processor 15.6" (39.62cms) FHD Laptop (8GB/512GB SSD/Win 10/MS Offce/Integrated Graphics/Natural Silver/1.69 Kg), 15s-fr2006TU</p>
-                        <p><mark> Rs. 45,490 </mark><del>Rs. 49,144.50 </del> Save Rs. 3,654.50</p>
-                        <p> (7%) </p>
-                        <p> Save extra with No Cost EMI </p>
+                        <p><mark> Rs. 46,490 </mark><del>Rs. 49,144.50 </del> Save Rs. 2,654.50</p>
+                        <p> (5%) </p>
+                        <p> Inclusive of all taxes </p>
                         <p style="color:blue"> prime</p>
-                        <p> Free Delivery by Renewed Store</p>
+                        <p> 7 Days Replacement + 1 Year Warranty </p>
                        <!-- <p style="color:red"> Only 1 left stock.</p> -->
                     </div> 
                     <div class="col-3">
-                        <a href="https://www.amazon.in/HP-Processor-39-62cms-Integrated-15s-fr2006TU/dp/B08XNYH4LX/ref=sr_1_8?dchild=1&keywords=laptops&qid=1628919628&sr=8-8">
-                        <img src="https://images-na.ssl-images-amazon.com/images/I/71uOkXZyteL._SL1500_.jpg" alt=""></a>
-                        
+                        <a href="https://amzn.to/3uw1vvS">
+                        <img src="https://images-na.ssl-images-amazon.com/images/I/71uOkXZyteL._SL1500_.jpg" alt="">
+                        <p style="border:5px; color:white; background-color:green"> &nbsp &nbsp &nbsp &nbsp >>> More Information  </p></a>
                     </div>  
                 </div>
             </div>
@@ -135,7 +135,7 @@
 
 <p>________________________________________________________________________________________________________________</p>
 
-                     <center><a href="https://www.amazon.in/s?k=laptops&page=2&qid=1628854712&ref=sr_pg_2"><h2> More Laptops</h2></a></center>
+                     <center><a href="https://amzn.to/3sllhrh"><h2> More Laptops</h2></a></center>
 
         <!----------offer-------->
         <div class="offer">
@@ -150,7 +150,7 @@
                         <small>
                             India’s No. 1 Fitness Band, 1.1-inch AMOLED Color Display, Magnetic Charging, 2 Weeks Battery Life, Personal Activity Intelligence (PAI), Women’s Health Tracking
                         </small>
-                        <a href="https://www.amazon.in/s?k=smart+watch&crid=ECAORFQBZSIS&sprefix=smart+watch%2Caps%2C-1&ref=nb_sb_ss_midas-iss-sm_1_5" class="btn">Buy Now</a>
+                        <a href="https://amzn.to/3gsHpKQ" class="btn">Buy Now</a>
                     </div>
                 </div>
             </div>
