--- a/Mobiles.html
+++ b/Mobiles.html
@@ -63,7 +63,7 @@
                     <div class="col-3">
                         <a href="https://amzn.to/3B3MfHT">
                         <img src="https://images-eu.ssl-images-amazon.com/images/I/41f8eOJLsPL._SX300_SY300_QL70_FMwebp_.jpg" alt="">
-                        <a href="https://amzn.to/3B3MfHT"> <p style="border:5px; color:white; background-color:green"> &nbsp &nbsp &nbsp &nbsp >>> More Information  </p> </a>
+                        <a href="https://amzn.to/3B3MfHT"> <p class="btn"> More Information  </p> </a>
                     </div>  
                 </div>
             </div>
@@ -85,7 +85,7 @@
                     <div class="col-2">
                         <a href="https://amzn.to/3rxdUxI">
                         <img src="https://m.media-amazon.com/images/I/91kAtEXPIeL._SL1500_.jpg" alt="">
-                        <a href="https://amzn.to/3rxdUxI"> <p style="border:5px; color:white; background-color:green"> &nbsp &nbsp &nbsp &nbsp >>> More Information  </p> </a>
+                        <a href="https://amzn.to/3rxdUxI"> <p class="btn"> More Information  </p> </a>
                     </div>  
                 </div>
             </div>
@@ -106,7 +106,7 @@
                     <div class="col-2">
                         <a href="https://amzn.to/35NdQBm">
                         <img src="https://m.media-amazon.com/images/I/71-Su4Wr0HL._AC_UY218_.jpg" alt="">
-                        <a href="https://amzn.to/35NdQBm"> <p style="border:5px; color:white; background-color:green"> &nbsp &nbsp &nbsp &nbsp >>> More Information  </p> </a>
+                        <a href="https://amzn.to/35NdQBm"> <p class="btn"> More Information  </p> </a>
                     </div>  
                 </div>
             </div>
