--- a/index.html
+++ b/index.html
@@ -98,9 +98,9 @@ body {
             <h2 class="title">Categories</h2>
             <div class="row">
                 <div class="col-4">
-                    <a href="https://www.amazon.in/s?k=laptops&ref=nb_sb_noss_2">
-                    <img src="images/laptop_category.jpg">
-                    <h4>Laptops</h4></a>
+                    <a href="Watches.html">
+                    <img src="https://m.media-amazon.com/images/I/61+1mV90ohL._SL1296_.jpg">
+                    <h4>Watches</h4></a>
                 </div>
                 <div class="col-4">
                     <a href="https://www.amazon.in/s?k=smart+phones&ref=nb_sb_noss_2">
@@ -108,16 +108,35 @@ body {
                     <h4>Mobiles</h4></a>
                 </div>
                 <div class="col-4">
-                    <a href="https://www.amazon.in/s?k=speakers&crid=LUYPLC4CRCDV&sprefix=spea%2Caps%2C418&ref=nb_sb_ss_midas-iss-sm_1_4">
-                    <img src="images/speaker_category.jpg">
-                    <h4>Speakers</h4></a>
+                    <a href="men-Shoes.html">
+                    <img src="https://m.media-amazon.com/images/I/81fVnnKvTHL._UL1500_.jpg">
+                    <h4>Men's Shoes</h4></a>
                 </div>
                 <div class="col-4">
-                    <a href="https://www.amazon.in/s?k=keyboard+and+mouse&crid=37XRIGCGF9TAR&sprefix=keyboard%2Caps%2C422&ref=nb_sb_ss_midas-iss-sm_3_8">
+                    <a href="mouse_keyboard.html">
                     <img src="images/mouse_keyboard.jpg">
                     <h4>Mouse and Keyboards</h4></a>
                 </div>
-
+                <div class="col-4">
+                    <a href="Women-Shoes.html">
+                    <img src="https://m.media-amazon.com/images/I/71JI-o85t7L._UL1500_.jpg">
+                    <h4>Women's Shoes</h4></a>
+                </div>
+                <div class="col-4">
+                    <a href="Sports & Outdoors.html">
+                    <img src="https://m.media-amazon.com/images/I/41eXV+BBxDL.jpg">
+                    <h4>Sports & Outdoors</h4></a>
+                </div>
+                <div class="col-4">
+                    <a href="Kitchen.html">
+                    <img src="https://m.media-amazon.com/images/S/onsitepublishing-media-prod/9d797c4b-da17-4cbc-98fb-3dea5b1df65d/images/50fdf5a7-5b52-4022-a039-07b79d940511.jpg">
+                    <h4>Kitchen & Housewares</h4></a>
+                </div>
+                <div class="col-4">
+                    <a href="Beauty.html">
+                    <img src="https://m.media-amazon.com/images/I/41dsiHOa+yL.jpg">
+                    <h4>Beauty Products</h4></a>
+                </div>
             </div>
 
             <!----------latest product-------->
