--- a/Watches.html
+++ b/Watches.html
@@ -39,30 +39,30 @@
                 <div class="col-2">
                     <p> <strong>Smart Speakers For Your Home </strong><p>
                     <p style="color:LightBlue"> Shop Echo> </p>                    
-                    <a href="product_details.html"><img src="https://m.media-amazon.com/images/I/61fAoBkYQ1L._AC_SR180,120_QL70_.jpg"></a>
-                    <p> Echo Dot (3rd Gen) - #1 smart speaker brand in India with Alexa (White)</p>
+                    <a href="https://amzn.to/3rJwkex"><img src="https://m.media-amazon.com/images/I/61TfoVDHWML._SL1500_.jpg"></a>
+                    <p> Noise ColorFit Pulse Smartwatch with 1.4" Full Touch HD Display, SpO2, Heart Rate, Sleep Monitors & 10-Day Battery - Deep Wine</p>
                 </div>
                 <div class="col-2">
-                    <a href="#"><img src="https://m.media-amazon.com/images/I/61KIy6gX-CL._AC_SR180,120_QL70_.jpg"></a>
-                    <p>Echo Dot (4th Gen, 2020 release)|#1 smart speaker brand in India with Alexa (Black)</p>
+                    <a href="https://amzn.to/3HGRAXY"><img src="https://m.media-amazon.com/images/I/71POWyd+MjL._UL1500_.jpg"></a>
+                    <p>Titan Neo Analog Dial Men's Watch</p>
                 </div>  
 <p>________________________________________________________________________________________________________________</p>
  
 
                 <div class="row">
                     <div class="col-3">
-                        <p> Echo Dot (4th Gen, 2020 release)| #1 smart speaker brand in India with Alexa (Black)</p>
-                        <p><mark> Rs. 4,499 </mark><del>Rs. 5,499 </del> </p>
+                        <p> Acnos Brand - A Branded 3 Different Colors Black Blue and Brown Analogue Super Quality Stylish Watches for Mens/Watches for Boys Pack of 3</p>
+                        <p><mark> Rs. 399 </mark><del>Rs. 2,100 </del> </p>
                         
                         <!-- <p> Save extra with No Cost EMI </p> -->
                         <p style="color:blue"> prime</p>
-                        <p> Pay on Delivery + 10 days returnable </p>
-                        <p> 1 Year Warranty </p>
+                        <p> Pay on Delivery + 10 days returns </p>
+                         
                     </div> 
                     <div class="col-3">
-                       <a href="https://amzn.to/3JcjWcQ">
-                       <img src="https://m.media-amazon.com/images/I/61KIy6gX-CL._AC_UY218_.jpg" alt="">
-                       <a href="https://amzn.to/3JcjWcQ"> <p class="btn"> More Information  </p> </a>
+                       <a href="https://amzn.to/3Bf8jPR">
+                       <img src="https://m.media-amazon.com/images/I/61HoOKwq6UL._UL1020_.jpg" alt="">
+                       <a href="https://amzn.to/3Bf8jPR"> <p class="btn"> More Information  </p> </a>
                     </div>  
                 </div>
             </div>
@@ -70,6 +70,47 @@
 <p>________________________________________________________________________________________________________________</p>
  
 
+               <div class="col-4">
+                    <a href="Watches.html">
+                    <img src="https://m.media-amazon.com/images/I/61+1mV90ohL._SL1296_.jpg">
+                    <h4>Watches</h4></a>
+                </div>
+                <div class="col-4">
+                    <a href="https://www.amazon.in/s?k=smart+phones&ref=nb_sb_noss_2">
+                    <img src="images/mobile_category.jpg">
+                    <h4>Mobiles</h4></a>
+                </div>
+                <div class="col-4">
+                    <a href="men-Shoes.html">
+                    <img src="https://m.media-amazon.com/images/I/81fVnnKvTHL._UL1500_.jpg">
+                    <h4>Men's Shoes</h4></a>
+                </div>
+                <div class="col-4">
+                    <a href="mouse_keyboard.html">
+                    <img src="images/mouse_keyboard.jpg">
+                    <h4>Mouse and Keyboards</h4></a>
+                </div>
+                <div class="col-4">
+                    <a href="Women-Shoes.html">
+                    <img src="https://m.media-amazon.com/images/I/71JI-o85t7L._UL1500_.jpg">
+                    <h4>Women's Shoes</h4></a>
+                </div>
+                <div class="col-4">
+                    <a href="Sports & Outdoors.html">
+                    <img src="https://m.media-amazon.com/images/I/41eXV+BBxDL.jpg">
+                    <h4>Sports & Outdoors</h4></a>
+                </div>
+                <div class="col-4">
+                    <a href="Kitchen.html">
+                    <img src="https://m.media-amazon.com/images/S/onsitepublishing-media-prod/9d797c4b-da17-4cbc-98fb-3dea5b1df65d/images/50fdf5a7-5b52-4022-a039-07b79d940511.jpg">
+                    <h4>Kitchen & Housewares</h4></a>
+                </div>
+                <div class="col-4">
+                    <a href="Beauty.html">
+                    <img src="https://m.media-amazon.com/images/I/41dsiHOa+yL.jpg">
+                    <h4>Beauty Products</h4></a>
+                </div>
+            </div>
 
                 <div class="row">
                     <div class="col-3">
