--- a/Watches.html
+++ b/Watches.html
@@ -33,12 +33,12 @@
        </div>
 
 <!------------------------ Images ----------------------->
-            <h2 class="title">Latest Smart Speakers</h2>
+            <h2 class="title">Latest Smart Watches</h2>
             <div class="row">
 
                 <div class="col-2">
-                    <p> <strong>Smart Speakers For Your Home </strong><p>
-                    <p style="color:LightBlue"> Shop Echo> </p>                    
+                    <p> <strong>Smart Watches For Men's & Women's </strong><p>
+                    <p style="color:LightBlue"> Noise Store> </p>                    
                     <a href="https://amzn.to/3rJwkex"><img src="https://m.media-amazon.com/images/I/61TfoVDHWML._SL1500_.jpg"></a>
                     <p> Noise ColorFit Pulse Smartwatch with 1.4" Full Touch HD Display, SpO2, Heart Rate, Sleep Monitors & 10-Day Battery - Deep Wine</p>
                 </div>
