--- a/Watches.html
+++ b/Watches.html
@@ -72,17 +72,17 @@
 
                <div class="col-4">
                     <a href="Watches.html">
-                    <img src="https://m.media-amazon.com/images/I/61+1mV90ohL._SL1296_.jpg">
+                    <img src="https://m.media-amazon.com/images/I/61+1mV90ohL._SL1296_.jpg"; height="50px"; width="50px" >
                     <h4>Watches</h4></a>
                 </div>
                 <div class="col-4">
-                    <a href="https://www.amazon.in/s?k=smart+phones&ref=nb_sb_noss_2">
+                    <a href="https://www.amazon.in/s?k=smart+phones&ref=nb_sb_noss_2"; height="50px"; width="50px">
                     <img src="images/mobile_category.jpg">
                     <h4>Mobiles</h4></a>
                 </div>
                 <div class="col-4">
                     <a href="men-Shoes.html">
-                    <img src="https://m.media-amazon.com/images/I/81fVnnKvTHL._UL1500_.jpg">
+                    <img src="https://m.media-amazon.com/images/I/81fVnnKvTHL._UL1500_.jpg"; height="50px"; width="50px">
                     <h4>Men's Shoes</h4></a>
                 </div>
                 <div class="col-4">
@@ -92,22 +92,22 @@
                 </div>
                 <div class="col-4">
                     <a href="Women-Shoes.html">
-                    <img src="https://m.media-amazon.com/images/I/71JI-o85t7L._UL1500_.jpg">
+                    <img src="https://m.media-amazon.com/images/I/71JI-o85t7L._UL1500_.jpg"; height="50px"; width="50px">
                     <h4>Women's Shoes</h4></a>
                 </div>
                 <div class="col-4">
                     <a href="Sports & Outdoors.html">
-                    <img src="https://m.media-amazon.com/images/I/41eXV+BBxDL.jpg">
+                    <img src="https://m.media-amazon.com/images/I/41eXV+BBxDL.jpg"; height="50px"; width="50px">
                     <h4>Sports & Outdoors</h4></a>
                 </div>
                 <div class="col-4">
                     <a href="Kitchen.html">
-                    <img src="https://m.media-amazon.com/images/S/onsitepublishing-media-prod/9d797c4b-da17-4cbc-98fb-3dea5b1df65d/images/50fdf5a7-5b52-4022-a039-07b79d940511.jpg">
+                    <img src="https://m.media-amazon.com/images/S/onsitepublishing-media-prod/9d797c4b-da17-4cbc-98fb-3dea5b1df65d/images/50fdf5a7-5b52-4022-a039-07b79d940511.jpg"; height="50px"; width="50px">
                     <h4>Kitchen & Housewares</h4></a>
                 </div>
                 <div class="col-4">
                     <a href="Beauty.html">
-                    <img src="https://m.media-amazon.com/images/I/41dsiHOa+yL.jpg">
+                    <img src="https://m.media-amazon.com/images/I/41dsiHOa+yL.jpg"; height="50px"; width="50px">
                     <h4>Beauty Products</h4></a>
                 </div>
             </div>
