--- a/Watches.html
+++ b/Watches.html
@@ -10,6 +10,17 @@
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5.15.3/css/fontawesome.min.css">
 
 </head>
+<style>
+    .col-4 {
+    flex-basis: 15%;
+    padding: 25px;
+    min-width: 200px;
+    margin-bottom: 20px;
+    transition: 0.5s;
+}
+    
+</style>
+    
 <body>
         <div class="header">
             <div class="container">
