--- a/Watches.html
+++ b/Watches.html
@@ -82,61 +82,77 @@
  
 
                <div class="col-4">
-                    <a href="Watches.html">
-                    <img src="https://m.media-amazon.com/images/I/61+1mV90ohL._SL1296_.jpg"; height="50px"; width="50px" >
-                    <h4>Watches</h4></a>
+                    <a href="https://amzn.to/3sxAfdS">
+                    <img src="https://m.media-amazon.com/images/I/61DOA5nUzOL._UL1100_.jpg"; >
+                    <h4>TCT</h4>
+                    <p> (R-TM) Sports Good Looking Date/Week Display Digital Stylish Watch for Men</p> 
+                        <p><mark> ₹199</mark><del> ₹699</del> Save ₹500 (72%) </p> </a>
                 </div>
                 <div class="col-4">
-                    <a href="https://www.amazon.in/s?k=smart+phones&ref=nb_sb_noss_2"; height="50px"; width="50px">
-                    <img src="images/mobile_category.jpg">
-                    <h4>Mobiles</h4></a>
+                    <a href="https://amzn.to/3GJQjOD">
+                    <img src="https://m.media-amazon.com/images/I/81EaDo51omL._UL1500_.jpg">
+                    <h4>PIRASO</h4>
+                    <p> Piraso Day and Date Watch for-Men </p>
+                        <p><mark> ₹245</mark><del> ₹1,599 </del> Save ₹1,354 (85%)</a>
                 </div>
                 <div class="col-4">
-                    <a href="men-Shoes.html">
-                    <img src="https://m.media-amazon.com/images/I/81fVnnKvTHL._UL1500_.jpg"; height="50px"; width="50px">
-                    <h4>Men's Shoes</h4></a>
+                    <a href="https://amzn.to/3GF5etf">
+                    <img src="https://m.media-amazon.com/images/I/91zvsjtEEDL._UL1500_.jpg">
+                    <h4>STYLEDOSE</h4>
+                        <p> Styledose Branded Analogue Black Dial Magnet Watch with Gift Bracelet...</p>
+                        <p><mark> ₹299 </mark><del> ₹999 </del> Save ₹700 (70%)</a>
                 </div>
                 <div class="col-4">
-                    <a href="mouse_keyboard.html">
-                    <img src="images/mouse_keyboard.jpg">
-                    <h4>Mouse and Keyboards</h4></a>
+                    <a href="https://amzn.to/3rT7ych">
+                    <img src="https://m.media-amazon.com/images/I/61uY-wl4OdL._UL1001_.jpg">
+                    <h4>ADAMO</h4>
+                        <p> Analog Rose Gold Dial Women's Watch-839KKM21</p>
+                        <p><mark> ₹282 </mark><del> ₹1,695 </del> Save ₹1,413 (83%)</a>
                 </div>
                 <div class="col-4">
-                    <a href="Women-Shoes.html">
-                    <img src="https://m.media-amazon.com/images/I/71JI-o85t7L._UL1500_.jpg"; height="50px"; width="50px">
-                    <h4>Women's Shoes</h4></a>
+                    <a href="https://amzn.to/3uJU8kl">
+                    <img src="https://m.media-amazon.com/images/I/41NopI0Jh+L.jpg">
+                    <h4>MERCURY FASHION</h4>
+                        <p> Stylish Analog Watch for Men's, Black Casual Watch Analog Watch...</p>
+                        <p><mark> ₹199 </mark><del> ₹999 </del> Save ₹800 (80%)</a>
                 </div>
                 <div class="col-4">
-                    <a href="Sports & Outdoors.html">
-                    <img src="https://m.media-amazon.com/images/I/41eXV+BBxDL.jpg"; height="50px"; width="50px">
-                    <h4>Sports & Outdoors</h4></a>
+                    <a href="https://amzn.to/3gD4HxD">
+                    <img src="https://m.media-amazon.com/images/I/71YThEVf2HS._UL1500_.jpg">
+                    <h4>XFORIA</h4>
+                        <p> Analogue Men's Avengers Watch Combo for Boys Latest Multicolor</p>
+                        <p><mark> ₹233 </mark><del> ₹890 </del> Save ₹657 (74%)</a>
                 </div>
                 <div class="col-4">
-                    <a href="Kitchen.html">
-                    <img src="https://m.media-amazon.com/images/S/onsitepublishing-media-prod/9d797c4b-da17-4cbc-98fb-3dea5b1df65d/images/50fdf5a7-5b52-4022-a039-07b79d940511.jpg"; height="50px"; width="50px">
-                    <h4>Kitchen & Housewares</h4></a>
+                    <a href="https://amzn.to/3GF609D">
+                    <img src="https://m.media-amazon.com/images/I/71qpD8bpwZL._UL1500_.jpg">
+                    <h4>SWISSTONE</h4>
+                        <p> Analogue Women's Watch (Blue Dial Silver Colored Strap)</p>
+                        <p><mark> ₹424 </mark><del> ₹2,599 </del> Save ₹2,175 (84%)</a>
                 </div>
                 <div class="col-4">
-                    <a href="Beauty.html">
-                    <img src="https://m.media-amazon.com/images/I/41dsiHOa+yL.jpg"; height="50px"; width="50px">
-                    <h4>Beauty Products</h4></a>
+                    <a href="https://amzn.to/3HPI84E">
+                    <img src="https://m.media-amazon.com/images/I/617YWU0I0VL._UL1001_.jpg">
+                    <h4>SKYLOFTS</h4>
+                        <p> 18K Gold-Plated Quartz Movement Analogue Gold Dial...</p>
+                        <p><mark> ₹649 </mark><del> ₹1,999 </del> Save ₹1,350 (68%)</a>
                 </div>
             </div>
 
                 <div class="row">
                     <div class="col-3">
-                        <p>Eufy Genie AK-T1241211 Smart Speaker with Amazon Alexa (Black)</p>
-                        <p><mark> Rs. 1,409 </mark><del>Rs. 2,499 </del> Save Rs. 1,099</p>
-                        <p> (44%) </p>
+                        <p>Men's/Boys Classic Analogue Quartz Formal Watch with Stylish Round Formal Dial with Leather Band</p>
+                        <p><mark> Rs. 239 </mark><del>Rs. 499 </del> Save Rs. 260</p>
+                        <p> (52%) </p>
                        <!--  <p> Save extra with No Cost EMI </p> -->
                         <p style="color:blue"> prime</p>
-                        <p> Pay on Delivery + 7 days replacement </p>
+                        <p> Warranty Policy + 10 days returns </p>
                        <p style="color:red"> Only 1 left stock.</p> 
                     </div> 
                     <div class="col-3">
-                        <a href="https://www.amazon.in/Eufy-Genie-AK-T1241211-Speaker-Amazon/dp/B071JN3KYN/ref=sr_1_5?crid=Q8KZ8L2TU0RE&dchild=1&keywords=smart+speaker&qid=1628861877&sprefix=smart+sp%2Caps%2C357&sr=8-5">
-                        <img src="https://m.media-amazon.com/images/I/71QukIod+-L._AC_UY218_.jpg" alt="">
-                        <a href="https://amzn.to/3JcjWcQ"> <p class="btn"> More Information  </p> </a>
+                        <a href="https://amzn.to/3rJEtje">
+                        <img src="https://m.media-amazon.com/images/I/512IpZnx8qL.jpg" alt="">
+                        <a href="https://amzn.to/3rJEtje"> <p class="btn"> More Information  </p> </a>
                     </div>  
                 </div>
             </div>
