--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@ body {
                     <h4>Mobiles</h4></a>
                 </div>
                 <div class="col-4">
-                    <a href="men-Shoes.html">
+                    <a href="Men's Shoes.html">
                     <img src="https://m.media-amazon.com/images/I/81fVnnKvTHL._UL1500_.jpg">
                     <h4>Men's Shoes</h4></a>
                 </div>
