--- a/Speakers.html
+++ b/Speakers.html
@@ -7,7 +7,7 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
 <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5.15.3/css/fontawesome.min.css">
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5.15.3/css/fontawesome.min.css"> 
 
 </head>
 <body>
@@ -32,7 +32,8 @@
            </div>
        </div>
 
-<!------------------------ Images ----------------------->
+<!------------------------ Images -----------
+------------>
             <h2 class="title">Latest Smart Speakers</h2>
             <div class="row">
 
@@ -114,7 +115,7 @@
             </div>
         </div>
 <p>________________________________________________________________________________________________________________</p>
- 
+<hr>s 
 
 
                 <div class="row">
@@ -137,6 +138,7 @@
         </div>
 
 <p>________________________________________________________________________________________________________________</p>
+<hr>
 
                      <center><a href="https://amzn.to/3syyQDC"><h2> More Speakers</h2></a></center>
 
